# ChangeLog for x11-wm/musca
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/musca/ChangeLog,v 1.17 2011/06/01 15:48:27 jer Exp $

*musca-0.9.24_p20100226-r1 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> -musca-0.9.24.ebuild,
  +musca-0.9.24_p20100226-r1.ebuild, +files/musca.xsession:
  Add xsession entry thanks to Matthew Alexander LaChance (bug #369355). Remove
  die() messages.

  02 Feb 2011; Tim Harder <radhermit@gentoo.org> musca-0.9.24_p20100226.ebuild:
  Add ~amd64 keyword.

  22 Jan 2011; Jeroen Roovers <jer@gentoo.org> files/musca-0.9.24-make.patch:
  Clean up patches.

*musca-0.9.24_p20100226 (26 Feb 2010)

  26 Feb 2010; Jeroen Roovers <jer@gentoo.org>
  +musca-0.9.24_p20100226.ebuild:
  Version bump using bzr snapshot (r270 from 03 Nov 2009).

  18 Feb 2010; Jeroen Roovers <jer@gentoo.org> musca-0.9.24.ebuild:
  restore_config has its own USE check.

  27 Dec 2009; Jeroen Roovers <jer@gentoo.org>
  files/musca-0.9.24-make.patch:
  Fix compiling with --as-needed thanks to Kacper Kowalik (bug #298144).

  30 Nov 2009; Jeroen Roovers <jer@gentoo.org> musca-0.9.24.ebuild:
  Whitespace.

  30 Nov 2009; Jeroen Roovers <jer@gentoo.org> musca-0.9.24.ebuild:
  Fix USE=xlisten dobin.

  30 Nov 2009; Jeroen Roovers <jer@gentoo.org> -musca-0.9.23.ebuild,
  -files/musca-0.9.23-flags.patch:
  Remove old.

  30 Nov 2009; Jeroen Roovers <jer@gentoo.org> musca-0.9.24.ebuild,
  +files/musca-0.9.24-make.patch, metadata.xml:
  Fix linking with --as-needed (bug #295165). Make in parallel too. Build
  xlisten optionally too.

  04 Nov 2009; Jeroen Roovers <jer@gentoo.org> musca-0.9.24.ebuild:
  Die more often.

*musca-0.9.24 (03 Nov 2009)

  03 Nov 2009; Jeroen Roovers <jer@gentoo.org> +musca-0.9.24.ebuild,
  metadata.xml:
  Version bump.

  29 Sep 2009; Jeroen Roovers <jer@gentoo.org> musca-0.9.23.ebuild:
  Die if dobin fails.

  28 Sep 2009; Jeroen Roovers <jer@gentoo.org> musca-0.9.23.ebuild: