@@ -4,14 +4,13 @@ Hash: SHA1
 AUX musca-0.9.24-make.patch 711 RMD160 b12498b12db93fee1297f13824dcd4eab010980d SHA1 239fd253cb59b46215305f6c72ed1d00b4aad959 SHA256 114b44eb6cc3584fb079faadc85d3ebf170d6c1f790a6f55c78ce7f95583cadb
 AUX musca.xsession 16 RMD160 b7465701e85c59cc8099accf39786f712262a92e SHA1 2d3dd698b35fe9f3fbb333103117a6f19a15eb63 SHA256 b9497cce444e83c33c62c124cb73fa3a7ee5b2ab24a9679b3c6d89a5957a9c47
 DIST musca-0.9.24_p20100226.tgz 81490 RMD160 e84696457e83831d4f5bb98a7b77770a214d35b6 SHA1 76744f1b24e5eb5adcf1546e593d9b633a2dfdc5 SHA256 63167c76fa5ea9381685d209e12b795001d8d0d183b22a6578f255b56ca87676
-EBUILD musca-0.9.24_p20100226-r1.ebuild 1134 RMD160 92625fd3a9e655296538001944b33d2cf714a22a SHA1 129f6dcf650e7300171189985f2cd13df663a54c SHA256 14f7cfca585d9b83890c7302a843c54e54353aa75efff52a16e84c07b2b0a8d8
-EBUILD musca-0.9.24_p20100226.ebuild 1108 RMD160 4b7efaf304d0c5b9c0f19765430452a2e8e9ca29 SHA1 32fb06c5574de4a07b047266041d81a47af0fd30 SHA256 12fa6cab6a8f8622d5c2ada1e5cf8ca5c5a40d61049979cf387c4df1dba2dbd1
-MISC ChangeLog 2309 RMD160 23398961e5c8a3d2672b088de3a523c36696d528 SHA1 cd7ef4f58a34b303c2eba84e1869a9f5710900df SHA256 a45e721d188b48f9d31456ff050b6c4ad765ab37155be7a7c05405663ba14feb
+EBUILD musca-0.9.24_p20100226-r1.ebuild 1138 RMD160 ae2a7f5f7681695e13eb08226d1afac7ead3c4ca SHA1 992ea91a42fdf2116459ac0710df113b4ede84c1 SHA256 55c4007c37f3505ac68f9e687845a4b8638a7c39a56e7751f8a7222b2b17e503
+MISC ChangeLog 2444 RMD160 d7d28125b093c37202317b7ef8c890942ab508dc SHA1 8f0e171e0359061b53bb9500ef93a5719cfd8e9d SHA256 c48b9db8d48de073d01e87bb3166055a07338abd77bffd5df9f8b8704f8ef71e
 MISC metadata.xml 414 RMD160 48e7824340a745d8c0d30296aed143911bda4068 SHA1 c80f5d6a4342fe357f5e6be384bc9787b2d92243 SHA256 1c3fb26b847decbd35600a421d2ed11a494454cc463281c4d989f8341efb6029
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3mX1AACgkQVWmRsqeSphN79gCdEs618bJJ5qytD/zP8p61FZuL
-mbIAn0TCz/O5TMQchzBb/nExtJWmgE+L
-=OFF6
+iEYEARECAAYFAk4w67QACgkQVWmRsqeSphP0tgCdFNL65pz8Y7yz0ApHapGjzVxK
+BqgAn30mS3sgUHfnJbAKqGJ35/YKPV72
+=KYeq
 -----END PGP SIGNATURE-----
